# PythonPackage

./: .gitignore  __init__.py  collect_framework.py  requirements.txt
package/: LICENSE  README.md  pyproject.toml
package/src/test0IhorSemykopenko.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  conftest.py  test_collect_framework.py
